fix alignment on about page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
-
-.about-1 img, .about-2 img {
-	width: : 332px;
-	height: : 295px;
+.about-2 {
+	display: flex;
+	margin-bottom: 5%;
 }
 
 .about-you {
@@ -14,7 +13,6 @@
 	color: rgb(33,120,128);
 	background-color: lightgrey;
 }
-
 
 .agreement-text {
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
@@ -730,7 +728,8 @@ ul {
 
 
 @media screen and (max-device-width:800px) {
-	.about-1, .about-2 {
+	.about-2 {
+		display: block;
 		margin-bottom: 4%;
 	}
 
@@ -1008,10 +1007,6 @@ ul {
 }
 
 @media screen and (min-device-width:800px) and (max-device-width:1000px)  {
-	.about-1, .about-2 {
-		display: flex;
-		margin-bottom: 4%;
-	}
 	.bottom-footer a, .bottom-footer p {
 		padding-right: 0%;
 	}
